# CoreFoundation

./: C2HS.hs  CoreFoundation.cabal  LICENSE
CoreFoundation/: Array.chs  Base.chs  Boolean.chs  Data.chs  Date.chs  Dictionary.chs  Marshal.hs  Number.chs  Preferences.chs  PropertyList.chs  String.chs  Touch.hs  Type.chs  Types.hs  URI.hs
CoreFoundation/Array/: Internal.hs
CoreFoundation/Types/: Array.chs  Base.chs  Boolean.chs  Data.chs  Date.chs  Dictionary.chs  Number.chs  PropertyList.chs  PropertyList.hs  String.chs  Type.chs
CoreFoundation/Types/Array/: Internal.hs
cbits/: cbits.c  cbits.h
examples/: Description.hs  Hash.hs  Roundtrip.hs  TypeDescription.hs
