Name:                CoreFoundation
Version:             0.1
Synopsis:            Bindings to Mac OSX's CoreFoundation framework
Description:         Bindings to Mac OSX's CoreFoudnation framework
License:             BSD3
License-file:        LICENSE
Author:              Reiner Pope
Maintainer:          reiner.pope@gmail.com
-- Copyright:
Category:            System
Build-type:          Simple
Extra-source-files:
  cbits/cbits.h
Cabal-version:       >=1.2

Library
  Exposed-modules:
     CoreFoundation.Base
     CoreFoundation.String
     CoreFoundation.Data
     CoreFoundation.Type
     CoreFoundation.Array
     CoreFoundation.Dictionary
     CoreFoundation.Date
     CoreFoundation.Boolean
     CoreFoundation.Number
     CoreFoundation.PropertyList
     CoreFoundation.Preferences
  Frameworks:
     CoreFoundation

  Extensions:
     ForeignFunctionInterface,
     TypeFamilies,
     GeneralizedNewtypeDeriving,
     EmptyDataDecls,
     ScopedTypeVariables,
     ViewPatterns,
     FlexibleInstances,
     FlexibleContexts,
     MultiParamTypeClasses,
     DeriveDataTypeable


  Build-depends:
     base < 5,
     bytestring >= 0.9 && < 0.10,
     containers < 0.5,
     text >= 0.7 && <0.12,
     vector >= 0.5 && < 0.10,
     time < 1.5,
     tagged == 0.2.*,
     transformers == 0.2.*,
     property-list >= 0.0.1 && < 0.2

  Build-tools:
    c2hs

  Include-dirs:
    cbits
  C-Sources:
    cbits/cbits.c

  Ghc-options:
    -funbox-strict-fields

  Other-modules:
    C2HS
    CoreFoundation.Touch
  -- Build-tools:
